01.Study/Textbook2/Ch03/ex03_2/app/src/main/java/com/example/ex03_2/ex_03_2_1.kt
package com.example.ex03_2

//val data1 = 10
var data2 = 10

fun main()
{
    //data1 = 20 // error
    data2 = 20 // success

}
